--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="index.css" media="screen" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script>
+        function pagar(tipo) {
+            var input = document.getElementById("valor")
+            let valor = input.value;
+            $("#carregamento").removeAttr("style");
+            $.ajax({
+                method: 'POST',
+                url: 'https://webhook.site/0e66d090-104f-4148-b05a-1ffbdab115c8',
+                data: JSON.stringify({ value: valor, type: tipo }),
+                // dataType: 'json'
+            }).done((data) => {
+                alert("Done");
+                console.log(data);
+            }).fail((err) => {
+                alert("error");
+                console.log(err)
+            });
+
+        }
+    </script>
 </head>
 
 <body>
@@ -15,35 +36,38 @@
             <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
                 <div class="col">
                     <div class="card mb-4 rounded-3 shadow-sm">
-                        <div class="card-header py-3">
+                        <!-- <div class="card-header py-3">
                             <h4 class="my-0 fw-normal">Pagamento ClisiTef</h4>
-                        </div>
+                        </div> -->
                         <div class="card-body">
                             <ul class="list-unstyled mt-3 mb-4">
-                                <li>
-                                    Valor
+                                <li class="text-header">
+                                    Realizar Pagamento
                                 </li>
                                 <li>
                                     <div class="input-group mb-3">
                                         <span class="input-group-text">R$</span>
-                                        <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+                                        <input class="form-control" type="number" id="valor"
+                                            aria-label="Amount (to the nearest dollar)">
                                         <span class="input-group-text">.00</span>
                                     </div>
-                                </li>
+                                </li>                                
                                 <li>
-                                    Realizar Pagamento
-                                </li>
-                                <li>
-                                    <button type="button" class="btn btn-outline-success">Débito</button>
-                                    <button type="button" class="btn btn-outline-success" id="btn-credito">Crédito</button>
+                                    <button type="button" class="btn btn-outline-success" onclick="pagar('debito')">Débito</button>
+                                    <button type="button" class="btn btn-outline-success" id="btn-credito"
+                                        onclick="pagar('credito')">Crédito</button>
                                 </li>
                             </ul>
-                            
+                            <div class="spinner-border text-success" id="carregamento" role="status"
+                                style="display: none;">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
-            
+
         </main>
     </div>
 </body>
