--- a/index.html
+++ b/index.html
@@ -14,19 +14,26 @@
             let valor = input.value;
             $("#alert-warning-div").removeClass('alert-hide');            
             $("#alert-success-div").addClass('alert-hide');
+            $("#alert-danger-div").addClass('alert-hide');
             $.ajax({
-                method: 'POST',
-                url: 'https://webhook.site/0e66d090-104f-4148-b05a-1ffbdab115c8',
-                data: JSON.stringify({ value: valor, type: tipo }),
-                // dataType: 'json'
+                method: 'POST',                
+                url: 'http://177.94.129.198:9011/Payment',
+                data: JSON.stringify({idTransaction: "0101" ,totalAmount: valor, type: tipo }),
+                contentType: 'application/json'
+                //dataType: 'json'
             }).done((data) => {                
                 console.log(data);
                 $("#alert-warning-div").addClass('alert-hide');
-                $("#alert-success-div").removeClass('alert-hide');
+                if(data.isSuccess) {
+                    $("#alert-success-div").removeClass('alert-hide');
+                } else {
+                    $("#alert-danger-div").removeClass('alert-hide');
+                }                
+                
             }).fail((err) => {
-                console.log(err);
-                alert('Deu erro!')
+                console.log(err);                
                 $("#alert-warning-div").addClass('alert-hide');
+                $("#alert-danger-div").removeClass('alert-hide');
             });
 
         }
@@ -63,7 +70,11 @@
                               </div>
                             <div class="alert alert-success alert-hide" id="alert-success-div" role="alert">
                                 Pagamento efetuado!!!
-                              </div>
+                            </div>
+                            <div class="alert alert-danger alert-hide" id="alert-danger-div" role="alert">
+                                Pagamento cancelado!!!
+                            </div>
+
 
                         </div>
                     </div>
